--- a/services/web/project/templates/base.html
+++ b/services/web/project/templates/base.html
@@ -2,6 +2,7 @@
     <head>
         <link rel="stylesheet" href="static/style.css">
         <title>CS40 Twitter Clone</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <h1 id="header">CS40 Twitter Clone</h1>
