--- a/services/web/project/templates/create_message.html
+++ b/services/web/project/templates/create_message.html
@@ -9,7 +9,7 @@
 
 <form action='/create_message' method="POST" class="loginform">
     <table>
-        <tr><td>message</td><td><input class="messagebox" type=textbox name=create_message></td></td><td><input type=submit value='Post'></td></tr>
+        <tr><td>message</td><td><input class="messagebox" type=textbox name=message></td></td><td><input type=submit value='Post'></td></tr>
     </table>
 </form>
 </div>
