--- a/services/web/project/templates/create_user.html
+++ b/services/web/project/templates/create_user.html
@@ -22,10 +22,10 @@
 
 <form action='/create_user' method="POST" class="loginform">
     <table>
-        <tr><td>username</td><td><input type=text name=username></td></tr>
-        <tr><td>password</td><td><input type=password name=password></td></tr>
+        <tr><td>username</td><td><input type=text name=username_new></td></tr>
+        <tr><td>password</td><td><input type=password name=password_new></td></tr>
         <tr><td>retype password</td><td><input type=password name=password_retyped></td></tr>
-        <tr><td>age</td><td><input type=text name=age></td></tr>
+        <tr><td>age</td><td><input type=text name=age_new></td></tr>
         <tr>
             <td></td>
             <td>
