--- a/services/web/project/templates/base.html
+++ b/services/web/project/templates/base.html
@@ -8,6 +8,7 @@
         <h1 id="header">CS40 Twitter Clone</h1>
         <ol class="center">
             <li class="menu-items"><a href='/'>Home</a></li>
+            <li class="menu-items"><a href='/search'>Search</a></li>
             {% if logged_in %}
             <li class="menu-items"><a href='/create_message'>Create message</a></li>
             <li class="menu-items"><a href='/logout'>Logout</a></li>
