--- a/services/web/project/templates/search.html
+++ b/services/web/project/templates/search.html
@@ -1,8 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
+<form action="/search" method="POST">
+    <input type="text" name="query" value={{query}}>
+    <input type="submit" value="search">
+</form>
+
 <div class="centerstrip">
-    <h2>Home</h2>
+    <h2>Search</h2>
     <p>Messages:</p>
     <div class="centercontrast">
     <table class="messages">
@@ -20,13 +26,13 @@
 
 <div>
     {% if prev_page < page_number %}
-        <a href="?page={{ prev_page }}" class="menu-items">Previous</a>
+        <a href="?query={{query}}&page={{ prev_page }}" class="menu-items">Previous</a>
     {% endif %}
 
     Page {{ page_number }}
 
     {% if messages|length == 20 %}
-        <a href="?page={{ next_page }}" class="menu-items">Next</a>
+        <a href=?query={{query}}&page={{ next_page }}" class="menu-items">Next</a>
     {% endif %}
 </div>
 {% endblock %}
