search highlighting test

--- a/services/web/project/static/style.css
+++ b/services/web/project/static/style.css
@@ -105,7 +105,7 @@ body {
   background-color: #99cfe0; /* A slightly darker shade of blue for hover */
 }
 
-.query {
+.search {
     background-color: #FCF803;
     color: black;
 }
