--- a/services/web/project/templates/base.html
+++ b/services/web/project/templates/base.html
@@ -1,7 +1,7 @@
 <html class="entirepage">
     <head>
         <link rel="stylesheet" href="static/style.css">
-        <title>CS40 Twitter Clone</title>
+        <title>Twitter Clone</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
