more changes css

--- a/services/web/project/templates/base.html
+++ b/services/web/project/templates/base.html
@@ -5,7 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h1 id="header">CS40 Twitter Clone</h1>
+        <div class="header">
+            <h1 id="header">CS40 Twitter Clone</h1>
+        </div>
         <ol class="center">
             <li class="menu-items"><a href='/'>Home</a></li>
             <li class="menu-items"><a href='/search'>Search</a></li>
