--- a/services/web/project/static/style.css
+++ b/services/web/project/static/style.css
@@ -1,115 +1,96 @@
-/* Add this import statement at the top */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-
-/* Reset some basic elements */
-body, h1, h2, h3, p, form, table {
-    margin: 0;
-    padding: 0;
-    font-family: 'Roboto', sans-serif; /* Update the font-family here */
-}
-
-body {
-    background-color: #F0F8FF;
-    color: #333;
-    text-align: center;
-    align-items: center;
-}
-
-.header {
-    background-color: #E1F5FE;
-    color: #0277BD;
-    padding: 10px 0;
-    text-align: left;
-    font-size: 24px;
-    font-weight: bold;
-}
-
-.header .logo {
-    margin-left: 20px;
-}
-
-.menu-items a { 
-    color: #0277BD;
-    text-decoration: none;
-    padding: 6px 15px;
-    font-size: 20px;
-}
-
-.menu-items a:hover {
-    background-color: #B3E5FC;
-}
-
-form, table {
-    width: 60%;
-    margin: 20px auto;
-}
-
-input[type=text], input[type=password], input[type=submit] {
-    padding: 10px;
-    margin: 5px 0;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-table {
-    border-collapse: collapse;
-}
-
-td, th {
-    padding: 10px;
-    border: 1px solid #ccc;
-}
-
-@media (max-width: 600px) {
-    .header .logo, .menu-items a { 
-        font-size: 18px;
-    }   
-    form, table {
-        width: 90%;
-    }   
-}
-
 mark { 
   background-color: yellow;
   color: black;
 }
 
-/* Style for login forms */
+h1 {
+  color: white;
+  font-size: 60pt;
+  padding: 10px;
+  text-align: center;
+  height: 252px;
+  background-repeat: no-repeat;
+  background-image: url(tihany.jpg);
+  background-position: center;
+}
+
+.centerstrip {
+  background: rgb(162, 217, 238);
+  align-items: center;
+  text-align: center;
+  margin-left: 20%;
+  width: 60%;
+  margin-right: 20%;
+  padding: 10px;
+}
+.centercontrast {
+  background: white;
+  color: black;
+  font-weight: bold;
+  align-items: center;
+  text-align: center;
+  margin-left: 20%;
+  width: 60%;
+  margin-right: 20%;
+  padding: 10px;
+}
+
+.main {
+  align-items: center;
+  text-align: center;
+}
+body {
+  background-color: lightslategray;
+  align-items: center;
+  text-align: center;
+}
+
+.center {
+  text-align: center;
+}
+.menu-items {
+  display: inline-block;
+  font-size: 30pt;
+  padding: 5px;
+  background: rgb(162, 217, 238);
+  color: black;
+  text-align: center;
+  font-weight: 900;
+}
+.menu-items:hover {
+  background: lightgreen;
+}
+
+.messages {
+  margin: 0 auto;
+  font-size: medium;
+  border: 1px solid #333;
+  border-collapse: collapse;
+}
+.td {
+  border: 1px solid #333;
+  padding: 10px;
+}
+
+.messagebox {
+  width: 500px;
+}
+
 .loginform {
-    width: 50%;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: #f7f7f7;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    font-family: 'Roboto', sans-serif;
+  background: rgb(162, 217, 238);
+  align-items: center;
+  text-align: center;
+  margin-left: 20%;
+  width: 60%;
+  margin-right: 20%;
+  padding: 10px; 
 }
-
-.loginform table {
-    width: 100%;
-    margin: 10px 0;
+.headers {
+  background: rgb(162, 217, 238);
+  align-items: center;
+  text-align: center;
+  margin-left: 20%;
+  width: 60%;
+  margin-right: 20%;
+  padding: 10px; 
 }
-
-.loginform input[type="text"], .loginform input[type="password"], .loginform textarea {
-    width: 95%;
-    padding: 10px;
-    margin-top: 6px;
-    margin-bottom: 16px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
-.loginform input[type="submit"] {
-    width: 100%;
-    padding: 10px;
-    background-color: #0277BD;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-.loginform input[type="submit"]:hover {
-    background-color: #01579B;
-}
-
