--- a/services/web/project/templates/root.html
+++ b/services/web/project/templates/root.html
@@ -1,24 +1,20 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div>
+<div class="centerstrip">
     <h2>Home</h2>
     <p>Messages:</p>
-    <div>
-        <table>
-            <tr>
-                <th>Sender (age)</th>
-                <th>Message</th>
-                <th>Created at</th>
-            </tr>
-            {% for message in messages %}
-            <tr>
-                <td>{{ message['username'] }} ({{ message['age'] }})</td>
-                <td>{{ message['message'] | safe }}</td>
-                <td>{{ message['created_at'] }}</td>
-            </tr>
-            {% endfor %}
-        </table>
+    <div class="centercontrast">
+    <table class="messages">
+        <tr><th>Sender (age)</th><th>Message</th><th>Created at</th></tr>
+        {% for message in messages %}
+        <tr>
+            <td class="td">{{message['username']}} ({{message['age']}})</td>
+            <td class="td">{{message['message']|safe}}</td>
+            <td class="td">{{message['created_at']}}</td>
+        </tr>
+        {% endfor %}
+    </table>
     </div>
 </div>
 
@@ -34,4 +30,3 @@
     {% endif %}
 </div>
 {% endblock %}
-
