--- a/services/web/project/templates/base.html
+++ b/services/web/project/templates/base.html
@@ -1,32 +1,24 @@
-{% extends 'base.html' %}
+<html class="entirepage">
+    <head>
+        <link rel="stylesheet" href="static/style.css">
+        <title>Twitter Clone</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </head>
+    <body>
+        <h1 id="header">CS40 Twitter Clone</h1>
+        <ol class="center">
+            <li class="menu-items"><a href='/'>Home</a></li>
+            <li class="menu-items"><a href='/search'>Search</a></li>
+            {% if logged_in %}
+            <li class="menu-items"><a href='/create_message'>Create message</a></li>
+            <li class="menu-items"><a href='/logout'>Logout</a></li>
+            {% else %}
+            <li class="menu-items"><a href='/login'>Login</a></li>
+            <li class="menu-items"><a href='/create_user'>Create user</a></li>
+            {% endif %}
+        </ol>
 
-{% block content %}
-<div class="centerstrip">
-    <h2>Home</h2>
-    <p>Messages:</p>
-    <div class="centercontrast">
-    <table class="messages">
-        <tr><th>Sender (age)</th><th>Message</th><th>Created at</th></tr>
-        {% for message in messages %}
-        <tr>
-            <td class="td">{{message['username']}} ({{message['age']}})</td>
-            <td class="td">{{message['message']|safe}}</td>
-            <td class="td">{{message['created_at']}}</td>
-        </tr>
-        {% endfor %}
-    </table>
-    </div>
-</div>
-
-<div>
-    {% if prev_page < page_number %}
-        <a href="?page={{ prev_page }}" class="menu-items">Previous</a>
-    {% endif %}
-
-    Page {{ page_number }}
-
-    {% if messages|length == 20 %}
-        <a href="?page={{ next_page }}" class="menu-items">Next</a>
-    {% endif %}
-</div>
-{% endblock %}
+        {% block content %}
+        {% endblock %}
+    </body>
+</html>
