--- a/services/web/project/static/style.css
+++ b/services/web/project/static/style.css
@@ -28,8 +28,8 @@ h1 {
   font-weight: bold;
   align-items: center;
   text-align: center;
-  margin-left: 20%;
-  width: 60%;
+  margin-left: 10%;
+  width: 80%;
   margin-right: 20%;
   padding: 10px;
 }
@@ -49,15 +49,15 @@ body {
 }
 .menu-items {
   display: inline-block;
-  font-size: 30pt;
-  padding: 5px;
+  font-size: 15pt;
+  padding: 3px;
   background: rgb(162, 217, 238);
   color: black;
   text-align: center;
   font-weight: 900;
 }
 .menu-items:hover {
-  background: lightgreen;
+  background: white;
 }
 
 .messages {
